--- a/style.css
+++ b/style.css
@@ -10,7 +10,9 @@ body{
 	flex-direction: column;
 	overflow: auto;
 	min-height: 100vh;
-	background-color: var(--primary-color);
+	/* background-color: var(--primary-color); */
+	
+	background-color: #191313;
 
 }
 :root{
@@ -21,16 +23,19 @@ header{
 	padding: 1rem;
 	display: flex;
 	justify-content: flex-start;
-	background-color: var(--secondary-color);
+	/* background-color: var(--secondary-color); */
+	background-color: rgb(196 23 23);
 }
 .Search{
-	background-color: transparent;
+	/* background-color: transparent; */
+	background-color: #00000036;
 	border-radius: 50px;
 	border: 2px solid var(--primary-color);
 	padding: 0.5rem 1rem;
 	font-size: 1rem;
 	font-family: inherit;
 	color: #FFBCBC;
+	
 
 
 }
@@ -50,8 +55,10 @@ main{
 	width: 300px;
 	margin: 1rem;
 	border-radius: 10px;
-	box-shadow: 0.2px 4px 5px rgba(0, 0, 0, 0.1);
-	background-color: var(--secondary-color);
+	box-shadow: 6.2px 7px 10px rgb(241 239 239 / 38%);
+	/* box-shadow: 0.2px 4px 5px rgba(0, 0, 0, 0.1); */
+	/* background-color: var(--secondary-color); */
+	background-color: #a10e0e;
 	position: relative;
 	overflow: hidden;
 
@@ -90,7 +97,8 @@ main{
 	left: 0;
 	right: 0;
 	bottom: 0;
-	background-color: var(--secondary-color);
+	/* background-color: var(--secondary-color); */
+	background-color: #fe7a21;
 	padding: 1rem;
 	max-height: 100%;
 	transform: translateY(500px);
@@ -113,6 +121,3 @@ main{
 	outline: 0;
 	background-color: var(--primary-color);
 }
-
-
-
